# skuggbox

./: .editorconfig  .gitignore  .ignore  Cargo.toml  LICENSE  README.md  deny.toml  rust-toolchain.toml
.github/workflows/: rust.yml
components/glsl-watcher/: Cargo.toml
components/glsl-watcher/examples/: base.frag  watcher.rs
components/glsl-watcher/src/: lib.rs  watcher_service.rs
components/macros/: Cargo.toml
components/macros/src/: lib.rs
components/sidifi/: Cargo.toml  README.md
components/sidifi/src/: errors.rs  glsl.rs  lib.rs
components/ui/: Cargo.toml
components/ui-backend/: Cargo.toml
components/ui-backend/src/: README.md  painter.rs  post_process.rs  window.rs
components/ui/src/: lib.rs  painter.rs  vao.rs  window.rs
shaders/: base.frag  base.vert  camera_integration.glsl  hg_sdf.glsl  init.glsl  iq.glsl  main.glsl  noise.glsl  orbit_camera.glsl  simple_example.glsl  test_include.glsl
src/: actions.rs  app.rs  audio.rs  buffer.rs  camera.rs  config.rs  event.rs  input.rs  lib.rs  macros.rs  main.rs  minime.rs  mouse.rs  opengl.rs  shader.rs  state.rs  support.rs  timer.rs  ui.rs  uniforms.rs  utils.rs  window.rs
src/render/: buffer.rs  camera.rs  mod.rs  renderer.rs
src/shader/: constants.rs  glsl.rs  mod.rs  pre_processor.rs  pre_processor2.rs  program.rs  read.rs  service.rs  skuggbox_shader.rs
src/ui/: README.md  mod.rs  painter.rs  post_process.rs  vao.rs
tests/: shader_include.rs
tests/files/: camera_integration_test.glsl  include_a.glsl  include_b.glsl  include_c.glsl  main_test.glsl
