[workspace]
members = [
    "components/glsl-watcher",
    "components/macros",
    "components/ui-backend",
]

[package]
name = "skuggbox"
version = "0.1.0"
authors = ["vojd <github.com/vojd>", "klovman <github.com/bysse>"]
edition = "2018"

[workspace.dependencies]
bytemuck = "1.9"
egui = { version = "0.22.0", features = ["bytemuck"] }
egui-winit = { version = "0.22.0", optional = false, default-features = true }
gl = "*"
glam = "0.24"
glow = "0.12"
glutin = "0.30"
glutin-winit = "0.3.0"

tracing = { version = "0.1", default-features = false, features = ["std"] }
winit = "0.28.6"

[dependencies]

# local dependencies
ui-backend = { path = "components/ui-backend", version = "0.1.0" }
glsl-watcher = { path = "components/glsl-watcher", version = "0.0.1" }
macros = { path = "components/macros", version = "0.1" }

anyhow = "1.0"
bytemuck = { workspace = true }
clap = { version = "4.3", features = ["derive"] }
egui = { workspace = true }
egui-winit = { workspace = true }
gl = { workspace = true }
glam = { workspace = true }
glow = { workspace = true }
glutin = { workspace = true }
glutin-winit = { workspace = true }
winit = { workspace = true }

log = "0.4"
memoffset = "0.9"
# required by glutin to access the raw window handle from the &Window
raw-window-handle = "0.5.0"
regex = "1.9"
serde = { version = "1.0", features = ["derive"] }
simple_logger = "4.2"
# simple_logger is dependent on `time`.
time = { version = "0.3.26", features = ["local-offset"] }
tracing = { workspace = true }
quote = "1.0"
which = "4.4" # Used for locating minime-preprocess
