[package]
name = "ui-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.7"
egui = { version = "0.19.0", features = ["bytemuck"]}
egui-winit = { version = "0.19.0", optional = false, default-features = true }
glow = "0.11"
macros = { path = "../macros", version = "0.1.0" }
tracing = { version = "0.1", default-features = false, features = ["std"] }
winit = "0.27"
