[package]
name = "ui-backend"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.9"
egui = { version = "0.22.0", features = ["bytemuck"]}
egui-winit = { version = "0.22.0", optional = false, default-features = true }
glow = "0.12"
macros = { path = "../macros", version = "0.1.0" }
tracing = { version = "0.1", default-features = false, features = ["std"] }
winit = "0.28.6"
