[package]
name = "ui-backend"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local deps
macros = { path = "../macros", version = "0.1.0" }

# external deps
bytemuck = { workspace = true }
egui = { workspace = true }
egui-winit = { workspace = true }
glow = { workspace = true }
tracing = { workspace = true }
winit = { workspace = true }
